--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Informations from "../components/Informations.astro";
+import Quote from "../components/Quote.astro";
 import Hero from "../components/hero/Home.astro";
 import Layout from "../layouts/Layout.astro";
 ---
@@ -10,6 +11,7 @@ import Layout from "../layouts/Layout.astro";
 >
   <Hero />
   <Informations />
+  <Quote />
 </Layout>
 
 <style is:global>
