--- a/src/components/hero/Home.astro
+++ b/src/components/hero/Home.astro
@@ -3,13 +3,8 @@ import {siteSettings} from "../../utils/store.ts";
 import Button from "../Button.astro";
 import MainNavigation from "../Nav/MainNavigation.astro";
 ---
-<section
-  class="
-    fullscreen fullscreen--home hero-bg--home
-    flex justify-center
-  "
->
-  <div class="container relative">
+<section class="fullscreen fullscreen--home hero-bg--home">
+  <div class="container mx-auto relative">
     <div class="flex flex-col justify-between">
       <MainNavigation />
       <div class="hero-heading">
