--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -45,7 +45,7 @@ const { title, description } = Astro.props;
     <meta name="description" content={description} />
     <ViewTransitions />
   </head>
-  <>
+  <body>
     <main class="flex flex-col justify-center">
       <slot />
     </main>
