--- a/src/pages/post/[slug].astro
+++ b/src/pages/post/[slug].astro
@@ -3,7 +3,6 @@ import type { InferGetStaticParamsType } from "astro";
 import { PortableText } from "astro-portabletext";
 import Layout from "../../layouts/Layout.astro";
 import { formatDate } from "../../utils";
-import { urlFor } from "../../utils/image";
 import { getPost, getPosts } from "../../utils/sanity";
 
 export async function getStaticPaths() {
@@ -19,7 +18,11 @@ const { slug } = Astro.params as Params;
 const post = await getPost(slug);
 ---
 
-<Layout title={post.title!}>
+<!-- TODO: description -->
+<Layout 
+  title={post.title!}
+  description=""
+>
   <section class="post">
     <div class="post__container">
       <h1 class="post__title">{post.title}</h1>
