Add Knowledge and Quote sections

--- a/src/components/Nav/MainNavigation.astro
+++ b/src/components/Nav/MainNavigation.astro
@@ -16,8 +16,6 @@ import Logo from "../Logo.astro";
   ">
     <a href={siteSettings?.massIntentionsUrl}>Intencje</a>
     <a href={siteSettings?.parishAnnouncementsUrl}>Ogłoszenia</a>
-    <a>Plan kolędy</a>
-    <a>Wiedza</a>
-    <a>Galeria</a>
+    <a href="/galeria">Galeria</a>
   </div>
 </nav>
