Prepare navigation for all page types

--- a/src/components/Hero/Home.astro
+++ b/src/components/Hero/Home.astro
@@ -6,7 +6,7 @@ import MainNavigation from "../Nav/MainNavigation.astro";
 <section class="fullscreen fullscreen--home hero-bg--home">
   <div class="container mx-auto relative">
     <div class="flex flex-col justify-between">
-      <MainNavigation />
+      <MainNavigation color="light" />
       <div class="hero-heading">
         <h1>
           <span class="heading h2">Parafia pw. św.</span><br>
