--- a/src/components/Hero/Page.astro
+++ b/src/components/Hero/Page.astro
@@ -6,14 +6,14 @@ const {title} = Astro.props;
 <section class="hero hero--page">
   <div class="container mx-auto relative">
     <div class="flex flex-col justify-between">
-      <MainNavigation />
+      <MainNavigation color="dark" />
     </div>
   </div>
 </section>
 
 <style>
   .hero--page {
-    @apply bg-bastille text-white pb-10;
+    @apply bg-white text-black;
   }
   .hero-heading {
     @apply pt-10 pb-20 text-center;
