--- a/src/components/Quote.astro
+++ b/src/components/Quote.astro
@@ -10,7 +10,7 @@ import ImagesCarousel from "./ImagesCarousel.astro";
       <p class="heading h1 text-luckypoint text-center">Gdzie dwóch albo trzech gromadzi się <br>w Moje imię, tam jestem pośród nich</p>
       <footer><cite class="text-2xl font-normal leading-none not-italic">Mt 18,20</cite></footer>
     </blockquote>
-    <ImagesCarousel client:visible />
+    <ImagesCarousel />
   </div>
 </section>
 
