--- a/src/components/Informations.astro
+++ b/src/components/Informations.astro
@@ -1,33 +1,34 @@
 ---
 import {siteSettings} from "../utils/store.ts";
 import type { ServiceRow, OfficeRow } from '../utils/sanity.ts'
+import Button from "./Button.astro";
 ---
 <section class="informations">
 
-  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 1394" fill="none" class="informations-bg">
-    <path d="M-44 0.5L1489 325V1394H-44L-44 0.5Z" fill="url(#paint0_radial_107_245)"/>
+  <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 1394" fill="none" class="informations-bg">
+    <path d="M-44 0.5L1489 150V1394H-44L-44 0.5Z" fill="url(#paint0_radial_107_245)"/>
     <defs>
       <radialGradient id="paint0_radial_107_245" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(1189.5 455.5) rotate(140.081) scale(2171.57 1839.13)">
         <stop stop-color="#2B2B35"/>
         <stop offset="1" stop-color="#0E0E12"/>
       </radialGradient>
     </defs>
-  </svg>
+  </svg> -->
   
   <div class="informations-grid">
     <div class="text-column">
       <div class="text-box">
         <h2 class="heading h1">Msze Święte</h2>
-        <p>{siteSettings?.messes}</p>
-        <p><a href={siteSettings?.massIntentionsUrl}>Zobacz intencje mszalne lll</a></p>
+        <p>{siteSettings.messes}</p>
+        <Button priority="tertiary" title="Zobacz intencje mszalne" url={siteSettings.massIntentionsUrl} arrow />
       </div>
       <div class="text-box">
         <h3 class="heading h3">Spowiedź święta</h3>
-        <p>{siteSettings?.confession}</p>
+        <p>{siteSettings.confession}</p>
       </div>
       <div class="text-box">
         <h3 class="heading h3">Nabożeństwa</h3>
-        {siteSettings?.services.map((row: ServiceRow) => (
+        {siteSettings.services.map((row: ServiceRow) => (
           <p>
             <span class="font-semibold">{row.name}</span>
             {!!row.when && <><br>{row.when}</>}
@@ -38,12 +39,12 @@ import type { ServiceRow, OfficeRow } from '../utils/sanity.ts'
         <h3 class="heading h3">Biuro Parafialne</h3>
         <div class="flex gap-10 leading-normal">
           <div class="flex flex-col gap-4">
-            {siteSettings?.office.map((row: OfficeRow) => (
+            {siteSettings.office.map((row: OfficeRow) => (
               <p class="font-semibold">{row.day}</p>
             ))}
           </div>
           <div class="flex flex-col gap-4">
-            {siteSettings?.office.map((row: OfficeRow) => (
+            {siteSettings.office.map((row: OfficeRow) => (
               <p>
                 {row.hours}
                 {!!row.note && <><br />{row.note}</>}
@@ -66,17 +67,22 @@ import type { ServiceRow, OfficeRow } from '../utils/sanity.ts'
 
 <style>
   .informations {
-    @apply relative flex justify-center -mt-[75vh] pt-64 pb-20 max-h-max overflow-hidden text-xl;
+    @apply relative flex justify-center -mt-[25vh] pt-40 pb-20 max-h-max md:text-xl bg-no-repeat bg-cover;
+    background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 1394" fill="none" class="informations-bg"><path d="M-44 0.5L1489 150V1394H-44L-44 0.5Z" fill="url(%23paint0_radial_107_245)"/><defs><radialGradient id="paint0_radial_107_245" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(1189.5 455.5) rotate(140.081) scale(2171.57 1839.13)"><stop stop-color="%232B2B35"/><stop offset="1" stop-color="%230E0E12"/></radialGradient></defs></svg>');
   }
-  .informations-bg {
-    @apply absolute left-0 top-0 w-svw h-max;
-  }
+  
   .informations-grid {
-    @apply container relative grid grid-cols-12 mx-auto gap-20 items-stretch;
+    @apply container relative
+    flex flex-col-reverse mx-auto gap-10 lg:gap-20
+    lg:grid lg:grid-cols-12 lg:items-stretch;
   }
   
   .text-column {
-    @apply relative grid col-start-2 col-span-5 justify-start items-start gap-20 text-white z-10;
+    @apply relative 
+    flex flex-col
+    lg:grid lg:col-start-2 lg:col-span-5
+    justify-start items-start gap-16 lg:gap-20
+    text-white z-10;
   }
   .text-box {
     @apply flex flex-col gap-y-5 px-5 whitespace-pre-wrap;
@@ -87,15 +93,15 @@ import type { ServiceRow, OfficeRow } from '../utils/sanity.ts'
     @apply relative h-full grid col-start-7 col-span-5 z-10;
   }
   .patron-sticky {
-    @apply sticky left-0 top-0 aspect-[485/713];
+    @apply sticky top-10 -mt-48 lg:-mt-40 mb-5 lg:mb-0 aspect-[485/713];
   }
   .patron-images {
     @apply relative aspect-[485/713];
   }
-  .patron img:first-child {
-    @apply absolute left-0 top-0 border-2 border-black z-10;
+  .patron img.patron-front {
+    @apply absolute inset-0 m-auto border-2 border-black z-10;
   }
-  .patron img:last-child {
-    @apply absolute left-0 top-0 blur-3xl z-0;
+  .patron img.patron-bg {
+    @apply absolute inset-0 m-auto blur-3xl z-0;
   }
 </style>
