--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -11,6 +11,7 @@ const color = Astro.props.type === "light" ? "white" : "black";
   viewBox="0 0 44 72"
   fill="none"
   xmlns="http://www.w3.org/2000/svg"
+  class="scale-75 xl:scale-100 origin-left"
 >
   <g id="Logo2">
     <path
