--- a/src/components/Hero/Home.astro
+++ b/src/components/Hero/Home.astro
@@ -12,7 +12,7 @@ import MainNavigation from "../Nav/MainNavigation.astro";
           <span class="heading h2">Parafia pw. św.</span><br>
           <span class="heading h0">Michała Archanioła</span>
         </h1>
-        <div class="flex justify-start items-center gap-10 mt-8">
+        <div class="hero-buttons">
           <Button priority="primary" title="Intencje mszalne" url={siteSettings?.massIntentionsUrl} />
           <Button priority="secondary" title="Ogłoszenia parafialne" url={siteSettings?.parishAnnouncementsUrl} />
         </div>
@@ -23,16 +23,22 @@ import MainNavigation from "../Nav/MainNavigation.astro";
 
 <style>
   .hero-bg--home {
-    @apply bg-no-repeat bg-center bg-cover bg-nero text-white;
+    @apply bg-no-repeat bg-[left_90%_center] xl:bg-center bg-cover bg-nero text-white;
     background-image: url('/hero-bg.jpg');
   }
   .fullscreen {
-    @apply w-full h-full min-h-[100vh];
+    @apply w-full h-[100vh];
   }
   .fullscreen--home {
-    @apply min-h-[140vh];
+    @apply  xl:min-h-[125vh];
   }
   .hero-heading {
-    @apply absolute top-[50vh] left-0 -translate-y-1/2;
+    @apply mt-16 lg:mt-20 text-center xl:text-left;
+  }
+  .hero-buttons {
+    @apply flex flex-col md:flex-row
+    justify-center xl:justify-start items-stretch md:items-center
+    gap-5 xl:gap-10
+    mt-8;
   }
 </style>
