--- a/src/components/Knowledge.astro
+++ b/src/components/Knowledge.astro
@@ -4,24 +4,25 @@
   import Caret from "./Partials/Caret.astro"
 
   const posts = await getPosts();
-  // TODO: zdjąć zieleń ze zdjęcia
 ---
 
 <section class="knowledge">
-  <div class="container mx-auto pt-28">
-    <div class="grid grid-cols-12">
-      <div class="relative col-start-0 col-span-5">
-        <div class="aspect-square w-full"></div>
-        <img src={caveImageSrc} class="absolute left-0 -bottom-2 z-20">
-        <img src={caveImageSrc} class="absolute left-0 -bottom-2 blur-3xl opacity-20 z-10">
+  <div class="container mx-auto pt-20 lg:pt-28">
+    <div class="knowledge-grid">
+      <div class="relative block lg:col-start-0 lg:col-span-5 h-full">
+        <div class="static aspect-square w-full"></div>
+        <img src={caveImageSrc} class="absolute left-0 right-0 lg:right-auto m-auto lg:m-0 -bottom-2 z-20">
+        <img src={caveImageSrc} class="absolute left-0 right-0 lg:right-auto m-auto lg:m-0 -bottom-2 blur-3xl opacity-20 z-10">
       </div>
-      <div class="col-start-7 col-span-6 pb-28 text-white text-left">
-        <h2 class="heading h0 -ml-28 mb-12">Wiara i historia</h2>
+      <div class="text-column">
+        <h2 class="heading h0 lg:-ml-28 mb-5 lg:mb-12 text-left">Wiara i historia</h2>
         <ul class="link-list">
-          {!!posts && posts.map((post: Post) => (
+          {posts?.map((post: Post) => (
             <li class="link-list-item">
-              <a href={`/post/${post.slug.current}`}>{post.title}</a>
-              <Caret />
+              <a href={`/post/${post.slug.current}`}>
+                {post.title}
+                <Caret />
+              </a>
             </li>
           ))}
         </ul>
@@ -32,7 +33,13 @@
 
 <style>
   .knowledge {
-    @apply text-xl overflow-hidden;
+    @apply text-xl overflow-visible;
     background: linear-gradient(180deg, #2B2B35 0%, #293459 100%);
+  }
+  .knowledge-grid {
+    @apply flex flex-col-reverse lg:grid lg:grid-cols-12;
+  }
+  .text-column {
+    @apply lg:col-start-7 lg:col-span-6 pb-5 lg:pb-28 text-white text-left;
   }
 </style>
