--- a/src/components/Nav/MainNavigation.astro
+++ b/src/components/Nav/MainNavigation.astro
@@ -15,7 +15,7 @@ const textColor = color === "light" ? "text-white" : "text-black";
   <a href="/">
     <Logo type={color} />
   </a>
-  <div class={`flex justify-center items-center gap-10 font-semibold ${textColor}`}>
+  <div class={`flex justify-center items-center gap-4 xl:gap-10 font-semibold ${textColor}`}>
     <a href={siteSettings?.massIntentionsUrl}>Intencje</a>
     <a href={siteSettings?.parishAnnouncementsUrl}>Ogłoszenia</a>
     <a href="/galeria">Galeria</a>
