--- a/src/components/Quote.astro
+++ b/src/components/Quote.astro
@@ -1,24 +1,28 @@
 ---
+import Button from "./Button.astro";
 import ImagesCarousel from "./ImagesCarousel.astro";
 //TODO: odłozyć ładowanie karuzeli do wejścia w ekran
-// TODO: przycisk z linkiem do galerii
+// TODO: Karuzela jest popsuta po cofnięciu strony w historii
 ---
-<section class="relative">
+<section class="relative overflow-hidden">
   <div class="quote-decorator"></div>
   <div class="container mx-auto overflow-visible">
     <blockquote class="quote">
-      <p class="heading h1 text-luckypoint text-center">Gdzie dwóch albo trzech gromadzi się <br>w Moje imię, tam jestem pośród nich</p>
-      <footer><cite class="text-2xl font-normal leading-none not-italic">Mt 18,20</cite></footer>
+      <p class="heading h1 text-luckypoint text-center">Gdzie dwóch albo trzech gromadzi się <br class="hidden lg:inline">w Moje imię, tam jestem pośród nich</p>
+      <footer><cite class="text-lg lg:text-2xl font-normal leading-none not-italic">Mt 18,20</cite></footer>
     </blockquote>
     <ImagesCarousel />
+    <div class="relative flex justify-end items-center mt-10 z-100">
+      <Button priority="primary" title="Zobacz galerię" url="/galeria" arrow />
+    </div>
   </div>
 </section>
 
 <style>
   .quote {
-    @apply flex justify-center items-center gap-20 py-32;
+    @apply flex flex-col xl:flex-row justify-center items-center gap-5 xl:gap-20 py-16 xl:py-32;
   }
   .quote-decorator {
-    @apply absolute left-0 right-0 bottom-0 m-auto h-40 w-full bg-bastille;
+    @apply absolute left-0 right-0 bottom-0 m-auto h-60 w-full bg-bastille z-0;
   }
 </style>
