--- a/src/pages/galeria.astro
+++ b/src/pages/galeria.astro
@@ -4,18 +4,20 @@ import {siteSettings} from "../utils/store.ts";
 import type {albumsCollection, Album} from "../utils/sanity.ts";
 import Caret from "../components/Partials/Caret.astro";
 import Hero from "../components/Hero/Page.astro";
+//TODO: link hover
+
 ---
 <Layout
-  title=""
-  description=""
+  title="Galeria Zdjęć Wydarzeń Parafialnych – Żywa Społeczność, Wiara i Tradycja"
+  description="Odkryj piękno i ducha wspólnoty naszej parafii. Przeglądaj galerię zdjęć z wydarzeń parafialnych, które odzwierciedlają naszą wiarę, tradycję i zaangażowanie społeczne. Dołącz do nas i bądź częścią naszej rodziny parafialnej."
 >
   <Hero title="Galeria" />
-  <section class="gallery py-10">
+  <section class="page">
     <div class="container mx-auto">
       <div class="hero-heading">
-        <h1 class="heading h0 text-center mt-10 mb-20">Galeria zdjęć</h1>
+        <h1 class="heading h0 text-center mt-10 mb-10 xl:mb-20">Galeria zdjęć</h1>
       </div>
-      <div class="narrow mx-auto flex flex-col gap-10">
+      <div class="narrow mx-auto flex flex-col xl:gap-10">
         {siteSettings?.galleryLinks.map((albumsCollection: albumsCollection) => (
           <div class="lg:flex lg:gap-10 lg:items-start lg:relative">
             <h2 class="heading h1 text-left mt-6 lg:absolute lg:right-full lg:pr-10 lg:mt-3">{albumsCollection.year}</h2>
@@ -24,7 +26,7 @@ import Hero from "../components/Hero/Page.astro";
                 albumsCollection.albums.map((album: Album) => (
                   !!album.link &&
                   <li class="link-list-item">
-                    <a href={album.link} target="_blank" class="flex justify-between items-center w-full"><span>{album.name}</span><Caret /></a>
+                    <a href={album.link} target="_blank"><span>{album.name}</span><Caret /></a>
                   </li>
                 )
               )}
@@ -35,9 +37,3 @@ import Hero from "../components/Hero/Page.astro";
     </div>
   </section>
 </Layout>
-
-<style>
-  .gallery {
-    @apply text-lg overflow-hidden bg-luckypoint text-white;
-  }
-</style>
