--- a/src/pages/post/[slug].astro
+++ b/src/pages/post/[slug].astro
@@ -2,8 +2,9 @@
 import type { InferGetStaticParamsType } from "astro";
 import { PortableText } from "astro-portabletext";
 import Layout from "../../layouts/Layout.astro";
-import { formatDate } from "../../utils";
 import { getPost, getPosts } from "../../utils/sanity";
+import Hero from "../../components/Hero/Page.astro";
+import { truncateText } from '../../utils/textHelpers';
 
 export async function getStaticPaths() {
   const posts = await getPosts();
@@ -16,125 +17,22 @@ type Params = InferGetStaticParamsType<typeof getStaticPaths>;
 const { slug } = Astro.params as Params;
 
 const post = await getPost(slug);
-
-// TODO: description
+const description = truncateText(post.body);
 ---
 
-<Layout 
+<Layout
   title={post.title!}
-  description=""
+  description={description}
 >
-  <section class="post">
-    <div class="post__container">
-      <h1 class="post__title">{post.title}</h1>
-      <p class="post__date">
-        {formatDate(post._createdAt)}
-      </p>
-      <div class="post__content">
+  <Hero />
+  <section class="page py-10">
+    <div class="container mx-auto">
+      <div class="hero-heading">
+        <h1 class="heading h0 text-center mt-10 mb-20">{post.title}</h1>
+      </div>
+      <div class="narrow leading-relaxed mx-auto flex flex-col gap-10 mb-10">
         <PortableText value={post.body} />
       </div>
     </div>
   </section>
 </Layout>
-
-<style>
-  .post {
-    width: 100%;
-    margin: var(--space-1) 0 var(--space-4);
-
-    & .post__cover,
-    & .post__cover--none {
-      width: 100%;
-      height: 200px;
-      object-fit: cover;
-    }
-
-    & .post__cover--none {
-      background: var(--black);
-    }
-
-    & .post__container {
-      padding: 0 var(--space-3);
-    }
-
-    & .post__content {
-      font-family: var(--font-family-serif);
-      font-weight: 400;
-      font-size: var(--font-size-4);
-      line-height: var(--line-height-5);
-      letter-spacing: -0.02em;
-      margin-top: var(--space-6);
-
-      /* Targeting tags in PortableText */
-      & blockquote {
-        border-left: 5px solid var(--black);
-        padding-left: var(--space-3);
-        margin-left: var(--space-4);
-      }
-
-      & a {
-        color: var(--blue-600);
-        text-decoration: none;
-      }
-    }
-
-    & .post__title {
-      font-family: var(--font-family-sans);
-      font-size: var(--font-size-7);
-      line-height: var(--line-height-6);
-      margin: var(--space-4) 0;
-      font-weight: 800;
-    }
-
-    & .post__excerpt {
-      font-family: var(--font-family-serif);
-      font-size: var(--font-size-5);
-      line-height: var(--line-height-4);
-      margin-top: 0;
-      font-weight: 400;
-    }
-
-    & .post__date {
-      font-family: var(--font-family-sans);
-      font-weight: 600;
-      font-family: var(--font-family-sans);
-      font-size: var(--font-size-1);
-      line-height: var(--line-height-1);
-      margin-top: var(--space-4);
-    }
-  }
-
-  @media (min-width: 800px) {
-    .post {
-      & .post__cover,
-      & .post__cover--none {
-        width: 750px;
-        height: 380px;
-      }
-
-      & .post__title {
-        font-size: var(--font-size-10);
-        line-height: var(--line-height-10);
-        margin: var(--space-6) 0 0;
-        letter-spacing: -0.025em;
-      }
-
-      & .post__excerpt {
-        font-size: var(--font-size-5);
-        line-height: var(--line-height-5);
-        margin-top: var(--space-3);
-        margin-bottom: var(--space-3);
-      }
-
-      & .post__date {
-        font-size: var(--font-size-3);
-        line-height: var(--line-height-2);
-        margin-top: var(--space-0);
-      }
-
-      & .post__content {
-        margin-top: var(--space-7);
-      }
-    }
-  }
-</style>
