Add pages routing, add pages to navigation and handle view transitions

--- a/src/components/Informations.astro
+++ b/src/components/Informations.astro
@@ -57,8 +57,8 @@ import Button from "./Button.astro";
     <div class="patron">
       <div class="patron-sticky">
         <div class="patron-images">
-          <img src="/michael-original.jpg" alt="Wizerunek patrona parafii – św. Michał Archanioł" class="patron-front">
-          <img src="/michael-original.jpg" alt="Wizerunek patrona parafii – św. Michał Archanioł – romzyte tło" class="patron-bg">
+          <img loading="lazy" src="/michael-original.jpg" alt="Wizerunek patrona parafii – św. Michał Archanioł" class="patron-front">
+          <img loading="lazy" src="/michael-original.jpg" alt="Wizerunek patrona parafii – św. Michał Archanioł – romzyte tło" class="patron-bg">
         </div>
       </div>
     </div>
