--- a/src/components/ImagesCarousel.astro
+++ b/src/components/ImagesCarousel.astro
@@ -11,7 +11,7 @@ const imagePaths = [
   <div class="swiper-wrapper overflow-visible">
     {imagePaths.map(image => (
       <div class="swiper-slide">
-        <img src={image} />
+        <img src={image} loading="lazy" />
       </div>
     ))}
   </div>
@@ -24,30 +24,50 @@ const imagePaths = [
 </style>
 
 <script>
-  import Swiper from 'swiper';
-  import 'swiper/css';
+  const loadSwiper = async () => {
+    if (!document.querySelector('.swiper-container')) {
+      
+      const swiperCSS = document.createElement('link');
+      swiperCSS.href = 'https://cdn.jsdelivr.net/npm/swiper@11.0.6/swiper-bundle.min.css';
+      swiperCSS.rel = 'stylesheet';
+      document.head.appendChild(swiperCSS);
 
-const swiper = new Swiper('.swiper', {
-  slidesPerView: 1.15,
-  spaceBetween: 20,
-  centeredSlides: false,
-  breakpoints: {
-    640: {
-      slidesPerView: 1.15,
-      spaceBetween: 10
-    },
-    768: {
-      slidesPerView: 2.25,
-      spaceBetween: 20
-    },
-    1024: {
-      slidesPerView: 3.5,
-      spaceBetween: 40
-    },
-    1280: {
-      slidesPerView: 4,
-      spaceBetween: 40
+      const swiperJS = document.createElement('script');
+      swiperJS.src = 'https://cdn.jsdelivr.net/npm/swiper@11.0.6/swiper-bundle.min.js';
+      swiperJS.async = true;
+      document.body.appendChild(swiperJS);
+
+      swiperJS.onload = () => {
+        // @ts-ignore
+        new Swiper('.swiper', {
+          slidesPerView: 1.15,
+          spaceBetween: 20,
+          centeredSlides: false,
+          breakpoints: {
+            640: {
+              slidesPerView: 1.15,
+              spaceBetween: 10
+            },
+            768: {
+              slidesPerView: 2.25,
+              spaceBetween: 20
+            },
+            1024: {
+              slidesPerView: 3.5,
+              spaceBetween: 40
+            },
+            1280: {
+              slidesPerView: 4,
+              spaceBetween: 40
+            }
+          }
+        });
+      };
     }
-  }
-});
+  };
+
+
+  document.addEventListener('astro:page-load', loadSwiper);
+  document.addEventListener('astro:after-swap', loadSwiper);
 </script>
+
