--- a/src/components/Knowledge.astro
+++ b/src/components/Knowledge.astro
@@ -11,8 +11,8 @@
     <div class="knowledge-grid">
       <div class="relative block lg:col-start-0 lg:col-span-5 h-full">
         <div class="static aspect-square w-full"></div>
-        <img src={caveImageSrc} class="absolute left-0 right-0 lg:right-auto m-auto lg:m-0 -bottom-2 z-20">
-        <img src={caveImageSrc} class="absolute left-0 right-0 lg:right-auto m-auto lg:m-0 -bottom-2 blur-3xl opacity-20 z-10">
+        <img loading="lazy" src={caveImageSrc} class="absolute left-0 right-0 lg:right-auto m-auto lg:m-0 -bottom-2 z-20">
+        <img loading="lazy" src={caveImageSrc} class="absolute left-0 right-0 lg:right-auto m-auto lg:m-0 -bottom-2 blur-3xl opacity-20 z-10">
       </div>
       <div class="text-column">
         <h2 class="heading h0 lg:-ml-28 mb-5 lg:mb-12 text-left">Wiara i historia</h2>
