--- a/src/components/Hero/Home.astro
+++ b/src/components/Hero/Home.astro
@@ -13,8 +13,8 @@ import MainNavigation from "../Nav/MainNavigation.astro";
           <span class="heading h0">Michała Archanioła</span>
         </h1>
         <div class="hero-buttons">
-          <Button priority="primary" title="Intencje mszalne" url={siteSettings?.massIntentionsUrl} />
-          <Button priority="secondary" title="Ogłoszenia parafialne" url={siteSettings?.parishAnnouncementsUrl} />
+          <Button priority="primary" title="Intencje mszalne" url={siteSettings?.massIntentionsUrl} targetBlank />
+          <Button priority="secondary" title="Ogłoszenia parafialne" url={siteSettings?.parishAnnouncementsUrl} targetBlank />
         </div>
       </div>
     </div>
